<resources>
    <string name="app_name">Orgs</string>
    <string name="input_label_name">Nome :</string>
    <string name="input_label_description">Descriçao :</string>
    <string name="input_label_value">Valor :</string>
    <string name="input_btn_save">Salvar</string>
    <string name="btn_add_description">Botao de adicionar</string>
    <string name="new_product">Novo Produto</string>
    <string name="icon_name_description">icone do nome</string>
    <string name="icon_description">Icone do campo descricao</string>
    <string name="icon_value">icone do campo valor</string>
    <string name="search_btn_dialog">Carregar</string>
    <string name="icon_url">icone de url</string>
    <string name="input_label_url">Url</string>
    <string name="dialog_button_confirm">Confirmar</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="input_label_date">Data :</string>
    <string name="icon_date">Icone de data</string>
    <string name="selected_date">Selecionar data</string>
    <string name="input_label_hour">Hora :</string>
    <string name="icon_hour">iconde de hora</string>
    <string name="edit_menu">Editar</string>
    <string name="edit_trash_menu">Excluir</string>
    <string name="deseja_personalizar_seu_app">Deseja personalizar seu app?</string>
    <string name="voce_pode_alterar_s_cores_do_seu_aplicativo">Voce pode alterar s cores do seu aplicativo</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="escolha_um_opcao">Escolha um opcao</string>
    <string name="como_deseja_prosseguir">Como deseja prosseguir?</string>
    <string name="camera">Camera</string>
    <string name="selecionar_cor">Selecionar Cor</string>
    <string name="selecione_a_cor_da_status_bar">Selecione a cor da status Bar</string>
    <string name="selecione_a_cor_da_appbar">Selecione a Cor da AppBar</string>
    <string name="selecione_a_cor_do_botao">Selecione a Cor do botao</string>
    <string name="selecione_a_cor_das_letras">Selecione a Cor das letras</string>
    <string name="selecione_a_cor_de_fundo">Selecione a Cor de fundo</string>
    <string name="ordenar">Ordenar</string>
    <string name="nome_desc">Nome Desc</string>
    <string name="nome_asc">Nome Asc</string>
    <string name="descicao_desc">Descicao Desc</string>
    <string name="descicao_asc">Descicao Asc</string>
    <string name="valor_desc">Valor Desc</string>
    <string name="valor_asc">Valor Asc</string>
    <string name="data_desc">Data Desc</string>
    <string name="data_asc">Data Asc</string>
    <string name="hora_desc">Hora Desc</string>
    <string name="hora_asc">Hora Asc</string>
    <string name="sem_ordem">Sem ordem</string>
    <string name="color_app">Color App</string>
    <string name="tirar_uma_foto">Tirar uma foto</string>
    <string name="user">Usuario :</string>
    <string name="password">Senha :</string>
</resources>