<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/form_image_product"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_not_image_default"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_product_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_label_name"
            android:layout_marginHorizontal="@dimen/dimensions_padding_form_16dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@android:color/holo_green_dark"
            app:hintTextColor="@android:color/holo_green_dark"
            app:startIconDrawable="@drawable/ic_person_name"
            app:startIconContentDescription="@string/icon_name_description"
            app:startIconTint="@android:color/holo_green_dark"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_image_product">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_product_layout_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimensions_padding_form_16dp"
            app:boxStrokeColor="@android:color/holo_green_dark"
            app:hintTextColor="@android:color/holo_green_dark"
            app:startIconDrawable="@drawable/ic_description"
            app:startIconContentDescription="@string/icon_description"
            app:startIconTint="@android:color/holo_green_dark"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/input_label_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_product_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_edit_description"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_product_layout_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimensions_padding_form_16dp"
            app:boxStrokeColor="@android:color/holo_green_dark"
            app:hintTextColor="@android:color/holo_green_dark"
            app:startIconDrawable="@drawable/ic_currency_value"
            app:startIconContentDescription="@string/icon_value"
            app:startIconTint="@android:color/holo_green_dark"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/input_label_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_product_layout_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_edit_value"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/input_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/input_btn_save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_product_layout_value"
            app:layout_constraintVertical_bias="0.994" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>